# django-headless

./: README.md  pyproject.toml
headless/: __init__.py
headless/rest/filters/: base.py
